--- a/about.css
+++ b/about.css
@@ -1,10 +1,12 @@
 .about-hero-section {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
     position: relative;
-    width: 1519px;
-    height: 958px;
+    height: 100vh;
+    width: 100%;
     left: 0px;
     top: 0px;
-    max-width: 100;
     margin-bottom: 4rem;
 }
 
@@ -24,29 +26,41 @@
 
 .about-main-section .about-container {
     width: 100%;
-    padding: 5rem;
+    padding: 5% 10%;
     margin-bottom: 3rem;
 }
 
 .about-main-section .about-container p {
+    padding: 5% 10%;
     width: 100%;
     text-align: justify;
+    font-size: 1.5vmax;
+    font-weight: 300;
 }
 
-.about-main-section .about-container p {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.about-main-section .about-container h2 {
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 46px;
+.about-main-section .about-container span {
+    font-style: italic;
+    padding: 0;
+    text-align: left;
+    font-size: 3vmax;
     font-weight: 700;
     color: var(--primary);
 }
 
+.about-main-section .about-container h2 {
+    color: #01FFF4;
+    font-weight: 700;
+    font-size: 4.3vmax;
+    text-align: center;
+    background: linear-gradient(180deg, #01FFF4 42.92%, rgba(1, 255, 244, 0) 99.99%, rgba(1, 255, 244, 0) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
 .about-visimisi {
+    width: 100%;
     position: relative;
 }
 
@@ -60,10 +74,9 @@
 .about-misi-title,
 .about-visi-title,
 .achievement-title {
-    padding: 0;
     color: #01FFF4;
     font-weight: 700;
-    font-size: 70px;
+    font-size: 4.3vmax;
     text-align: center;
     background: linear-gradient(180deg, #01FFF4 42.92%, rgba(1, 255, 244, 0) 99.99%, rgba(1, 255, 244, 0) 100%);
     -webkit-background-clip: text;
@@ -72,29 +85,29 @@
     text-fill-color: transparent;
 }
 
-.container-misi h2 {
-    padding: 3rem 20rem;
-    text-align: center;
+.container-visi,
+.container-misi {
+    padding: 1% 15%;
+    width: 100%;
 }
 
-.container-visi h2 {
-    padding: 3rem 20rem;
+.container-visi h2,
+.container-misi h2 {
+    font-size: 1.5vmax;
+    padding: 5% 0;
     text-align: center;
 }
 
 .about-achievement {
     width: 100%;
-    height: 100%;
-    position: relative;
-    margin-top: 5rem;
+    padding: 5% 0;
 }
 
 .gallery {
-    margin-top: 3rem;
-    height: 550px;
+    margin-top: 5%;
+    height: 35vmax;
     width: 100%;
 }
-
 
 .gallery-cell {
     width: 66%;
@@ -113,82 +126,84 @@
     object-position: center;
     margin: auto;
 }
-
-/* cell number */
+/* 
+cell number
 .gallery-cell:before {
     display: none;
     text-align: center;
-    /* content: counter(gallery-cell); */
+    content: counter(gallery-cell);
     line-height: 200px;
-    font-size: 80px;
-    color: white;
-}
+    font-size: 4vmax;
+    color: rgb(50, 50, 169);
+} */
 
 .match-count {
-    margin-top: 10rem;
+    padding: 10%;
+    margin-top: 0;
     width: 100%;
     position: relative;
-    flex-direction: column;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
 .match-count-container {
+    width: 100%;
     margin: auto;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     color: white;
-    column-gap: 3rem;
+    row-gap: 5vmax;
 }
 
 .match-count-container div {
-    margin: auto;
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
     justify-content: center;
 }
 
 .match-count h1 {
-    font-size: 76px;
+    font-size: 5vmax;
     margin: auto;
 }
 
 .match-count-container span {
     text-align: center;
-    color: rgb(1, 255, 244, 0.8);
-}
-
-.match-count-container h3 {
-    margin: auto;
-    text-align: center;
-    font-size: 46px;
-    height: 100px;
-}
-
-.match-count-container span {
     display: flex;
     justify-content: center;
-    height: 5px;
     color: rgb(1, 255, 244, 0.8);
+}
+
+.match-count-container div h3 {
+    padding-bottom: 5%;
+    margin: auto;
+    text-align: center;
+    font-size: 4vmax;
 }
 
 .match-count img {
     margin: auto;
-    padding: 5rem;
+    padding: 7%;
     width: 75%;
 }
 
 .contact-section {
-    width: 1519px;
-    margin-top: 5rem;
-    padding: 5rem;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 1% 10%;
     position: relative;
 }
 
 .contact-section header {
+    position: relative;
     display: flex;
+    width: 100%;
 }
 
 .contact-header-left {
-    width: 20%;
+    width: 40%;
 }
 
 .contact-header-left img {
@@ -204,48 +219,51 @@
 }
 
 .contact-header-right h1 {
-    font-size: 64px;
+    font-size: 4vmax;
+    font-weight:600;
 }
 
 .contact-header-right h3 {
-    font-size: 26px;
+    font-size: 2vmax;
+    font-weight: 400;
 }
 
 .contact-form {
-    gap: 10rem;
-    padding: 2rem;
+    row-gap: 10vmax;
+    padding: 3%;
     margin: auto;
     display: flex;
-    width: 1400px;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
     position: relative;
 }
+
 .contact-form-input {
     position: relative;
-    width: 50%;
+    width: 100%;
 }
+
 .contact-form input {
     position: relative;
-    width: 700px;
-    margin: 1rem 0;
+    width: 100%;
+    margin: 1% 0;
     border: 1px solid var(--primary);
     border-radius: 5px;
     background-color: var(--bg);
-    padding: 1rem;
+    padding: 1%;
 }
 
 .contact-form .contact-button {
-    top: 50%;
-    left: 50%;
-    text-align: ;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 2vmax;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
-    width:200px;
+    width: 30vmax;
     margin-right: 0;
     right: 0;
-    height: 60px;
+    height: 7vmax;
     border: 1px solid var(--primary);
     border-radius: 10px;
     background-color: rgba(8, 99, 200, 0.4);
@@ -256,46 +274,59 @@
     position: relative;
     background-color: #151C24;
     border: none;
-    height: 200px;
+    height:20vmax;
 }
 
 .contact-socmed {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
-    width: 50%;
+    width: 100%;
     background: rgba(8, 99, 200, 0.4);
-    padding: 2rem;
-    height: 560px;
+    border-radius: 5px;
+    padding: 10%;
     border: 2px solid #FFFFFF;
 }
-.contact-socmed h1{
-padding-bottom: 5rem;
-font-weight: 600;
+
+.contact-socmed h1 {
+    font-size: 3vmax;
+    position: relative;
+    padding-bottom: 5%;
+    font-weight: 400;
 }
-.contact-socmed h3{
-    font-size: 18px;
+
+.contact-socmed h3 {
+    font-size: 2vmax;
     font-weight: 400;
     text-decoration: underline;
 }
-.contact-socmed .contact-garis{
-    height: 5px;
+
+.contact-socmed .contact-garis {
     width: 100%;
-    top: -50px;
-    position: relative  
+    position: relative
 }
-.contact-socmed p{
+
+.contact-socmed p {
     display: flex;
-    align-items: center ;
+    align-items: center;
 }
+
 .contact-socmed .container-socmed {
     width: 100%;
 }
-.contact-socmed .container-socmed img{
-    width: 50px;
+
+.contact-socmed .container-socmed img {
+    width: 5vmax;
+
 }
-.contact-socmed .container-socmed a{
+
+.contact-socmed .container-socmed a {
     display: flex;
     padding: 1rem 0;
 }
-.contact-socmed .container-socmed a p{
+
+.contact-socmed .container-socmed a p {
+    font-size: 2vmax;
     padding-left: 2rem;
 }
