--- a/partners.css
+++ b/partners.css
@@ -1,11 +1,13 @@
 .partners-section {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
     position: relative;
-    width: 1519px;
-    height: 958px;
+    height: 100vh;
+    width: 100%;
     left: 0px;
     top: 0px;
-    max-width: 100;
-    margin-bottom: 6rem;
+    margin-bottom: 5%;
 }
 
 .partners-section::before {
@@ -33,7 +35,7 @@
     width: 100%;
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -51,7 +53,7 @@
 }
 .partners-card-left-desc{
     width: 100%;
-    bottom: 50px;
+    bottom: 5%;
     position: absolute;
 }
 .partners-card-left img {
@@ -60,23 +62,24 @@
     object-fit: cover;
 }
 .partners-card-left h3{
+    font-size: 1.5vmax;
     text-align: center;
     position: relative;
 }
 .partners-card-left .partners-view-button {
     position: relative;
-    padding: 5px;
-    width: 150px;
+    padding: 2% 7%;
+    width: fit-content;
     margin: auto;
     display: flex;
     justify-content: center;
     text-align: center;
-    border: 5px solid var(--primary);
+    border: 3px solid var(--primary);
     background-color: #151C24;
 }
 
 .partners-view-button h2 {
-    font-size: 15px;
+    font-size: 1.5vmax;
     font-weight: 700;
     color: var(--primary);
 }
@@ -86,17 +89,70 @@
     width: 65%;
     margin-left: 5rem;
 }
+.partners-card-right p{
+    margin: auto;
+    font-size: 1.2vmax;
+}
 .partners-content .partners-become{
     position: relative;
     background-color: #151C24;
     border: 5px solid var(--primary);
     margin: auto;
-    padding: 50px;
-    width: 700px;
+    padding: 3vmax;
+    width: fit-content;
+    margin-bottom: 10%;
 }
 .partners-become h1{
-    font-size: 36px;
-    font-weight: 800;
+    font-size: 2vmax;
+    font-weight: 600;
     color: var(--primary);
     text-align: center;
+}
+
+@media (1200px < width < 1399px) {
+    
+}
+@media (max-width: 768px) {
+    .partners-container{
+        justify-content: center;
+        column-gap: 10rem;
+    }
+    .partners-card{
+        padding: 0;
+        background-color:rgb(77, 158, 216,0.2);
+        border-radius: 20px;
+        width: 50%;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .partners-card-left{
+        background-color: var(--bg);
+        margin: auto;
+        width: 100%;
+    }
+    .partners-card-right{
+        text-align: justify;
+        margin: auto;
+        padding: 5% 10%;
+        width: 100%;
+    }
+    .partners-card-right p{
+        font-size: 1.5vmax;
+    }
+    .partners-card-left h3{
+        font-size: 2vmax;
+        text-align: center;
+        position: relative;
+    }
+    .partners-view-button h2 {
+        font-size: 2vmax;
+        font-weight: 700;
+        color: var(--primary);
+    }
+}
+@media (max-width: 576px) {
+    .partners-card{
+        width: 70%;
+       
+    }
 }
