--- a/about.css
+++ b/about.css
@@ -33,7 +33,7 @@
 .about-main-section .about-container p {
     padding: 5% 10%;
     width: 100%;
-    text-align: justify;
+    text-align: center ;
     font-size: 1.5vmax;
     font-weight: 300;
 }
@@ -45,10 +45,13 @@
     font-size: 3vmax;
     font-weight: 700;
     color: var(--primary);
+    text-shadow: 5px 10px 10px black;
 }
 
 .about-main-section .about-container h2 {
     color: #01FFF4;
+    width: 30%;
+    margin: auto;
     font-weight: 700;
     font-size: 4.3vmax;
     text-align: center;
@@ -58,7 +61,10 @@
     background-clip: text;
     text-fill-color: transparent;
 }
-
+/* .about-main-section .about-container h2:hover{
+    box-shadow: -1px 30px 100px  grey ;
+    transition: 0.5s;
+} */
 .about-visimisi {
     width: 100%;
     position: relative;
