--- a/custom.css
+++ b/custom.css
@@ -1101,7 +1101,7 @@ scroll-snap-type: mandatory;
   .pilihan-teampage1 .check {
     font-size: 6vmin;
   }
-  .navbar-shop a {
+  .navbar-shop h2 {
     display: none;
   }
   .nav-shop-a {
