--- a/custom.css
+++ b/custom.css
@@ -20,19 +20,23 @@ hr {
 }
 .team-ml {
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 100vw;
   row-gap: 8vmin;
 }
+.team-ml div{
+  width: 80%;
+}
 .team-ml a {
   margin: 0 auto;
-  gap: 10vh;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 20%;
 }
 .pilihan-teampage1 {
+  margin-bottom: 5%;
   width: 100vw;
   text-align: center;
 }
