--- a/custom.css
+++ b/custom.css
@@ -289,7 +289,6 @@ hr {
 }
 
 .navbar-shop {
-  z-index: 9999999;
   gap: 10%;
   width: 60%;
   height: auto;
@@ -346,6 +345,7 @@ align-items: center;
 }
 
 .navbar-sidebar {
+  top: 0;
   left: -100%;
   position: absolute;
   display: flex;
