Change all the files to php, i add 2 folder foto for admin and foto for news

--- a/news.css
+++ b/news.css
@@ -1,11 +1,10 @@
 .news-main-hero {
     position: relative;
-    width: 1519px;
-    height: 958px;
+    width: 100%;
+    height: 100vh;
     left: 0px;
     top: 0px;
-    max-width: 100%;
-    margin-bottom: 6rem;
+    max-width: 100%;    
 }
 
 .news-main-hero::before {
@@ -24,10 +23,10 @@
 
 /* NEWS */
 .news-main-title,
-.news-hiring-title{
+.news-hiring-title {
     color: #01FFF4;
     font-weight: 700;
-    font-size: 70px;
+    font-size: 4.3vmax;
     text-align: center;
     background: linear-gradient(180deg, #01FFF4 42.92%, rgba(1, 255, 244, 0) 99.99%, rgba(1, 255, 244, 0) 100%);
     -webkit-background-clip: text;
@@ -35,78 +34,101 @@
     background-clip: text;
     text-fill-color: transparent;
 }
+
 .news-main-section {
     box-sizing: border-box;
-    margin-top: 3rem;
     position: relative;
-    height: 170vh;
+    height: 100%;
+    width: 100%;
 }
 
 .news-main-container {
-    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 0 3rem;
-    row-gap: 1rem;
+    padding: 2rem 2%;
+    row-gap: 0.5rem;
+    column-gap: 1%;
     position: relative;
 }
 
+.news-main-content{
+    position: relative;
+    margin: auto;
+    width: 100%;
+    margin-top: 10vmax;
+}
 .news-main-container .news-main-card {
     position: relative;
-    height: 300px;
     width: 30%;
-    margin-right: 0.5rem;
-    margin-bottom: 2rem;
 }
 
 .news-main-container .news-main-card img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
+    height: 70vmin;
 }
-.news-main-section .news-page{
+
+.news-main-section .news-page {
     justify-content: center;
     display: flex;
 }
-.news-main-section .news-page button{
+
+.news-main-section .news-page button {
     padding: 5px;
     background-color: #D9D9D9;
     margin: 5px;
 }
-.news-hiring{
-    /* margin-top: 15rem; */
-    box-sizing: border-box;
+
+.news-hiring {
     position: relative;
-    
+    width: 100%;
+    margin-bottom: 10%;
+    margin-top: 10%;
 }
-.news-hiring-section{
+
+.news-hiring-section {
+    width: 100%;
     position: relative;
-    height: 60vh;
+    margin-bottom: 3%;
 }
-.news-hiring-container{
+
+.news-hiring-container {
+    height: 100%;
     margin-top: 2rem;
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 5vmax;
     position: relative;
     justify-content: center;
 }
-.news-hiring-card{
+
+.news-hiring-card {
     position: relative;
     width: 30%;
-    height: 300px;
 }
-.news-hiring-card img{
+
+.news-hiring-card img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
-    position: relative;
 }
-.news-hiring-card h2{
-    font-size: 24px;
+
+.news-hiring-card h2 {
+    position: relative;
+    font-size: 2vmax;
     font-weight: bold;
 }
-.news-hiring-card h3{
-    font-size: 18px;
-    font-weight:400;
+
+.news-hiring-card h3 {
+    position: relative;
+    font-size: 1.5vmax;
+    font-weight: 400;
+}
+
+@media screen {
+    
+}
+.news-hiring .news-hiring-card{
+
 }
